k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
spec:
  type: ClusterIP

  selector:
    app: demo-django

  ports:
    - name: http
      port: 80
      targetPort: 8000
